# ovirt-register

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  ovirt-node-register.py  python-ovirt-node-register-1.0-0.fc21.src.rpm  python-ovirt-node-register.spec  python-ovirt-register-1.0-1.fc22.src.rpm  python-ovirt-register.spec  python-ovirt-register.spec.in  register.py
automation/: build-artifacts.req.fc21  build-artifacts.sh  check-merged.req.fc21  check-merged.req.fc22  check-merged.sh  check-patch.req.el6  check-patch.req.fc21
docs/: Makefile.am
man/: Makefile.am
python-ovirt-node-register-1.0/: setup.py
python-ovirt-node-register-1.0/ovirtnoderegister/: expts.py  log.py  operations.py  register.py  system.py
python-ovirt-node-register-1.0/scripts/: ovirt-node-register
python-ovirt-register-1.0/: setup.py
python-ovirt-register-1.0/docs/: PROTOCOL  README
python-ovirt-register-1.0/man/: ovirt-register.1
python-ovirt-register-1.0/ovirt_register/: http.py  operations.py  pki.py  register.py  ssh.py  system.py  uuid.py
python-ovirt-register-1.0/ovirtregister/: __init__.py  expts.py  operations.py  register.py  system.py
python-ovirt-register-1.0/scripts/: ovirt-register
src/: Makefile.am
src/ovirt_register/: Makefile.am  __init__.py  http.py  pki.py  register.py  ssh.py  system.py  uuid.py.in
src/scripts/: Makefile.am  ovirt-register
